# rhanqtl.github.io

./: .gitignore  hugo.toml  hugo.yaml
.github/workflows/: hugo.yaml
content/about/: _index.ad
content/portfolio/: _index.md
content/posts/: _index.md
content/posts/astgen-a-survey/: index.ad
content/posts/building-blog-site/: index.ad
content/posts/instrumenting-custom-memory-allocators-with-valgrind/: index.ad
content/posts/instrumenting-custom-memory-allocators-with-valgrind/code/: method_1.cpp  method_2.cpp  method_3.cpp
content/posts/setting-up-cpp-dev-env/: index.md
content/posts/setting-up-cpp-dev-env/code/: CMakeLists.txt
content/posts/setting-up-cpp-dev-env/code/include/demo/Support/: Strings.h
content/posts/setting-up-cpp-dev-env/code/src/: main.cpp
content/posts/setting-up-cpp-dev-env/code/src/Support/: Strings.cpp
content/posts/using-deepseek-api/: index.ad
content/posts/using-wsl/: index.ad
content/series/: _index.ad
content/series/body-building/: _index.ad
content/series/body-building/carb-cycling-diet/: index.ad
content/series/cxxnotes/: _index.ad
content/series/cxxnotes/00-preface/: index.ad
content/series/cxxnotes/01-intro/: index.ad
content/series/cxxnotes/02-oop/: index.ad
content/series/cxxnotes/03-resource-management/: index.ad
content/series/cxxnotes/04-error-handling/: index.ad
content/series/cxxnotes/06-object-model/: index.ad
content/series/perf-eng/: _index.ad
content/series/software-design/: _index.ad
content/series/verilator-notes/: _index.ad
content/series/writing-sv-simulators/: _index.ad
(+103 files in other folders)
